<resources>
    <string name="app_name">Smart Spectro</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Start</string>
    <string name="previous">Previous</string>

    <string name="Application">Welcome on Smart Spectro</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bottom">Bottom</string>
    <string name="left">Left</string>
    <string name="top">Top</string>
    <string name="right">Right</string>


    <string name="validate_measure_button">Validate</string>
    <string name="take_picture">Take picture</string>
    <string name="save_reference_button">Save reference</string>
    <string name="save_picture_button">Save sample</string>
    <string name="clear_button_text">Clear graph</string>
    <string name="calibrate_button">Capture zone</string>
    <string name="L612_nm">612 nm</string>
    <string name="L546_nm">546 nm</string>
    <string name="L436_nm">436 nm</string>
    <string name="L488_nm">488 nm</string>
    <string name="clear">Clear</string>
    <string name="calibration_manuel">Manuel</string>
    <string name="calibration_semi_auto">Semi-automatique</string>
    <string name="calibration_auto">Automatique</string>
    <string name="keyExtra">ButtonClicked</string>
    <string name="save">Sauvegarder</string>
    <string name="Return">retour</string>
    <string name="finish">Fin</string>
</resources>