<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Choices">

    <Button
            android:id="@+id/buttonManuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibration_manuel"
            app:layout_constraintEnd_toStartOf="@+id/buttonSemiAuto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintBottom_toTopOf="@id/imageView3" />

    <Button
            android:id="@+id/buttonSemiAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibration_semi_auto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.582"
            app:layout_constraintStart_toEndOf="@+id/buttonManuel"
            app:layout_constraintTop_toBottomOf="@id/imageView2"
            app:layout_constraintBottom_toTopOf="@id/imageView3" />

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="96dp"
            android:layout_height="69dp"
            android:src="@android:drawable/ic_menu_manage"
            app:layout_constraintBottom_toTopOf="@+id/buttonManuel"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="96dp"
            android:layout_height="64dp"
            android:src="@android:drawable/ic_menu_crop"
            app:layout_constraintBottom_toTopOf="@+id/buttonSemiAuto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/buttonAutomatique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibration_auto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView3" />

    <ImageView
            android:id="@+id/imageView3"
            android:layout_width="77dp"
            android:layout_height="79dp"
            android:src="@android:drawable/ic_dialog_map"
            app:layout_constraintBottom_toTopOf="@id/buttonAutomatique"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonManuel" />

</androidx.constraintlayout.widget.ConstraintLayout>