<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:context="com.projet3a.smartspectro.CameraActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/calibrationViewLayout"
            android:layout_width="wrap_content"
            android:layout_height="183dp"
            android:layout_alignParentTop="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextureView
            android:id="@+id/texture"
            android:layout_width="wrap_content"
            android:layout_height="183dp"
            android:layout_alignParentTop="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/btn_takepicture"
            android:layout_width="116dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/buttonBackground"
            android:text="@string/take_picture"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texture" />

    <Button
            android:id="@+id/save_reference_button"
            android:layout_width="116dp"
            android:layout_height="49dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:background="@color/buttonBackground"
            android:text="@string/save_reference_button"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/clearButton"
            app:layout_constraintStart_toEndOf="@+id/btn_takepicture"
            app:layout_constraintTop_toBottomOf="@+id/texture" />

    <Button
            android:id="@+id/save_picture_button"
            android:layout_width="116dp"
            android:layout_height="49dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@color/buttonBackground"
            android:text="@string/save_picture_button"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/clearButton"
            app:layout_constraintStart_toEndOf="@+id/btn_takepicture"
            app:layout_constraintTop_toBottomOf="@+id/texture" />

    <com.jjoe64.graphview.GraphView
            android:id="@+id/intensityGraph"
            android:layout_width="0dp"
            android:layout_height="420dp"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texture"
            app:layout_constraintVertical_bias="0.964" />

    <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/buttonBackground"
            android:text="@string/clear_button_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texture"
            android:layout_marginRight="8dp" />

    <TextView
            android:id="@+id/maxInGraph"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_marginBottom="420dp"
            android:textAlignment="center"
            android:textColor="#F44336"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="invisible"
            android:gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>